welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:26: error: not found: value get
      setY(get(Y)-1);
           ^SnakeBuggle:26: error: not found: value Y
      setY(get(Y)-1);
               ^